<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/title_tools">
        <menu>
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_search"
                android:title="@string/search_action_title" />
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/title_gallery"
                />
        </menu>
    </item>

    <item android:title="@string/title_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/title_settings"
                />
            <item
                android:id="@+id/nav_color_settings"
                android:icon="@drawable/ic_palette"
                android:title="@string/title_settings_color"
                />
            <item
                android:id="@+id/nav_settings_device"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/title_settings_device"
                />
        </menu>
    </item>

    <item android:title="@string/section_title_share">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_share"
                />
            <item
                android:id="@+id/nav_share_twitter"
                android:icon="@drawable/ic_sns"
                android:title="@string/title_share_twitter"
                />
        </menu>
    </item>

</menu>
